Bug 405266 - File name is unreadable while the file is dragged on dark background
Summary: File name is unreadable while the file is dragged on dark background
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-09 14:38 UTC by Patrick Silva
Modified: 2020-05-05 23:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.0
Sentry Crash Report:


Attachments
screen recording (1.54 MB, video/webm)
2019-03-09 14:38 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-09 14:38:24 UTC
Created attachment 118667 [details]
screen recording

Watch the screen recording please.

EXPECTED RESULT
file name is always readable.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.1
Comment 1 Eike Hein 2019-03-10 07:21:28 UTC
The appearance of Dolphin's drag delegates is controlled by Dolphin, not Folder View.
Comment 2 Christian Christiansen 2020-05-05 23:41:06 UTC
Git commit 1d72710039b547d91b7138d3899e783e26aac849 by Christian Christiansen.
Committed on 05/05/2020 at 23:40.
Pushed by cchristiansen into branch 'master'.

Keep name readable on drag to matching background

Summary:
Previously, when a single item was selected and dragged, the
name would become unreadable when the text colour matched the
background colour it was dragged onto.

This is now fixed by not deselecting the item (and hence keeping
the highlighting around the text) before creating the pixmap for
dragging.

Test Plan: Tested with Breeze and Breeze Dark.

Reviewers: #dolphin, elvisangelaccio, meven

Reviewed By: #dolphin, elvisangelaccio, meven

Subscribers: meven, elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D29378

M  +0    -1    src/kitemviews/kitemlistwidget.cpp

https://commits.kde.org/dolphin/1d72710039b547d91b7138d3899e783e26aac849